Split off generic code into separate repo;

--- a/BarbezDotEu.License.Generator.WinForms/BarbezDotEu.License.Generator.WinForms/BarbezDotEu.License.Generator.WinForms.csproj
+++ b/BarbezDotEu.License.Generator.WinForms/BarbezDotEu.License.Generator.WinForms/BarbezDotEu.License.Generator.WinForms.csproj
@@ -13,4 +13,8 @@
     <PackageProjectUrl>https://www.barbez.eu</PackageProjectUrl>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\BarbezDotEu.License\BarbezDotEu.License\BarbezDotEu.License.Generation\BarbezDotEu.License.Generation.csproj" />
+  </ItemGroup>
+
 </Project>
