Added validator demonstration form;

--- a/BarbezDotEu.License.Generator.WinForms/BarbezDotEu.License.Generator.WinForms/BarbezDotEu.License.Generator.WinForms.csproj
+++ b/BarbezDotEu.License.Generator.WinForms/BarbezDotEu.License.Generator.WinForms/BarbezDotEu.License.Generator.WinForms.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\BarbezDotEu.License\BarbezDotEu.License\BarbezDotEu.License.Generation\BarbezDotEu.License.Generation.csproj" />
+    <ProjectReference Include="..\..\..\BarbezDotEu.License\BarbezDotEu.License\BarbezDotEu.License.Verification\BarbezDotEu.License.Verification.csproj" />
   </ItemGroup>
 
 </Project>
