--- a/BarbezDotEu.License.Generator.WinForms/BarbezDotEu.License.Generator.WinForms/BarbezDotEu.License.Generator.WinForms.csproj
+++ b/BarbezDotEu.License.Generator.WinForms/BarbezDotEu.License.Generator.WinForms/BarbezDotEu.License.Generator.WinForms.csproj
@@ -14,8 +14,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\BarbezDotEu.License\BarbezDotEu.License\BarbezDotEu.License.Generation\BarbezDotEu.License.Generation.csproj" />
-    <ProjectReference Include="..\..\..\BarbezDotEu.License\BarbezDotEu.License\BarbezDotEu.License.Verification\BarbezDotEu.License.Verification.csproj" />
+    <PackageReference Include="BarbezDotEu.License.Generation" Version="1.0.0" />
+    <PackageReference Include="BarbezDotEu.License.Verification" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
