--- a/BarbezDotEu.License.Generator.WinForms/.editorconfig
+++ b/BarbezDotEu.License.Generator.WinForms/.editorconfig
@@ -5,7 +5,7 @@ root = true
 # All files
 [*]
 indent_style = space
-file_header_template = Copyright (c) Hannes Barbez. All rights reserved.
+file_header_template = Copyright (c) Hannes Barbez. All rights reserved.\nLicensed under the GNU General Public License v3.0
 
 # Code files
 [*.{cs,csx,vb,vbx}]
