--- a/BarbezDotEu.License.Generator.WinForms/BarbezDotEu.License.Generator.WinForms/BarbezDotEu.License.Generator.WinForms.csproj
+++ b/BarbezDotEu.License.Generator.WinForms/BarbezDotEu.License.Generator.WinForms/BarbezDotEu.License.Generator.WinForms.csproj
@@ -2,15 +2,16 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
-    <Version>2.0.0</Version>
+    <Version>3.0.0</Version>
     <Authors>Hannes Barbez</Authors>
     <Company>Hannes Barbez</Company>
     <Product>Barbez.eu License Key Generator</Product>
     <Description>Barbez.eu License Key Generator</Description>
-    <Copyright>©2020 Barbez.eu</Copyright>
+    <Copyright>©2024 Barbez.eu</Copyright>
     <PackageProjectUrl>https://www.barbez.eu</PackageProjectUrl>
+    <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
   </PropertyGroup>
 
   <ItemGroup>
